<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:src="@drawable/app_logo" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="-20dp"
            android:fontFamily="@font/playpen_sans_thin"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="48sp" />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_marginEnd="24dp"
            android:layout_gravity="right"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/white"
            android:padding="18dp"
            android:text="@string/login"
            android:textColor="#3B84F1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/orLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily=""
            android:text="@string/OrLine"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:src="@drawable/facebook_logo" />

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:src="@drawable/google_logo" />

        </LinearLayout>

        <TextView
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>


</RelativeLayout>