<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/managers_login"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="372dp"
        android:layout_height="738dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="257dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="-20dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/kanmed"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="43sp" />

        <EditText
            android:id="@+id/email_input1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="email"
            android:background="@drawable/rounded_corner"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password_input1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="Password"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/forgot_password1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:onClick="forgotPassword"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/login_btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/white"
            android:onClick="Login"
            android:padding="18dp"
            android:text="@string/login"
            android:textColor="@color/purple"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/orLine1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily=""
            android:text="@string/OrLine"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <LinearLayout
            android:layout_width="273dp"
            android:layout_height="74dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:contentDescription=""
                android:src="@drawable/facebook" />

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:src="@drawable/google" />

        </LinearLayout>

        <Button
            android:id="@+id/create_account_btn1"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="1dp"
            android:backgroundTint="@android:color/transparent"
            android:gravity="center"
            android:onClick="register"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>


</RelativeLayout>