<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_screen"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="780dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="back"
            android:backgroundTint="@android:color/transparent"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:layout_width="168dp"
            android:layout_height="143dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Sign-up"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="Register to continue the amazing experience!"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="Username"
            android:background="@drawable/rounded_corner"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password_input1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="password"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/fullname_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="full name"
            android:background="@drawable/rounded_corner"
            android:hint="full name"
            android:inputType="text"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="phone number"
            android:background="@drawable/rounded_corner"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/email_input1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="email"
            android:background="@drawable/rounded_corner"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/white"
            android:padding="22dp"
            android:text="@string/register"
            android:textColor="@color/purple"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

    </LinearLayout>

</RelativeLayout>